New program and speakers -section

--- a/about-us.html
+++ b/about-us.html
@@ -60,7 +60,7 @@
         <li class=""><a href="brainfactory.html">BrainFactory</a></li>
 		    <li class=""><a href="about-us.html">About Us</a></li>
         <li class=""><a href="tickets.html">Tickets</a></li>
-        <li class=""><a href="volunteer.html">Volunteer</a></li>
+        <li class=""><a href="speakers-thursday.html">Speakers</a></li>
 		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
 		  </ul>
 		</div>
