--- a/brainfactory.html
+++ b/brainfactory.html
@@ -146,7 +146,7 @@
                           <li class=""><a href="brainfactory.html">BrainFactory</a></li>
                           <li class=""><a href="about-us.html">About Us</a></li>
                           <li class=""><a href="tickets.html">Tickets</a></li>
-                          <li class=""><a href="volunteer.html">Volunteer</a></li>
+                          <li class=""><a href="speakers-thursday.html">Speakers</a></li>
                           <li class=" last"><a href="why-attend.html">Why attend?</a></li>
                         </ul>
                       </div>
@@ -191,6 +191,9 @@
           <table><colgroup><col style="width: 20%;"><col style="width: 80%"></colgroup>
             <tbody>
               <tr>
+                <td colspan="2"><p>@ Oodi Library, Maijansali | Töölönlahdenkatu 4 Helsinki</p></td>
+              </tr>
+              <tr>
                 <td class="bulp"><p>15:00</p></td>
                 <td><p>Introduction and Kick-Off</p></td>
               </tr>
@@ -216,6 +219,9 @@
 
           <table><colgroup><col style="width: 20%;"><col style="width: 80%"></colgroup>
             <tbody>
+              <tr>
+                <td colspan="2"><p>@ Think Corner, Think Lounge | Yliopistonkatu 4 Helsinki</p></td>
+              </tr>
               <tr>
                 <td class="bulp"><p>09:00</p></td>
                 <td><p>Teams meet with mentors and continue working </p></td>
@@ -254,6 +260,12 @@
           <table><colgroup><col style="width: 20%;"><col style="width: 80%"></colgroup>
             <tbody>
               <tr>
+                <td colspan="2"><p>09.00 - 12:00 @ Maria 01 | Lapinlahdenkatu 16 Helsinki</p></td>
+              </tr>
+              <tr>
+                <td colspan="2"><p>14.30 - end of BF @ Hotel Clarion | Tyynenmerenkatu 2 Helsinki</p></td>
+              </tr>
+              <tr>
                 <td class="bulp"><p>09:00</p></td>
                 <td><p>Teams and mentors continue working </p></td>
               </tr>
@@ -270,12 +282,16 @@
 
               <tr>
                 <td class="bulp"><p>15:45</p></td>
-                <td><p>Thank you and see you at the Summit tomorrow /p></td>
+                <td><p>Thank you and see you at the Summit tomorrow</p></td>
+              </tr>
+
+              <tr>
+                <td class="bulp"><p>--></p></td>
+                <td><p>Afterwork at Clarion open for everyone!</p></td>
               </tr>
             </tbody>
           </table>
 
-          <p>*specifics of the timetable are still subject to change if we need to make adjustments</p>
         </div>
         </div>
         <div class="row justify-content-md-center justify-center">
