removed links to volunteering

--- a/index.html
+++ b/index.html
@@ -148,7 +148,6 @@
 					</div>
 					<h1 style="color: white;">Legal Design Summit</h1>
 					<p class="slogan-enhanced">11–13 SEP BRAINFACTORY | 14–15 SEP SUMMIT | HELSINKI, FINLAND</p><br><br>
-					<p class="slogan-long" style="font-weight: bold;">We are now looking for volunteers, <a href="volunteer.html" style="color: #50cec1; text-decoration: underline; font-weight: bold;">enlist here!</a></p>
 					<p class="slogan-long">Legal Design Summit is a platform for forward-thinking professionals from all over the globe.<br><br>The Largest legal design event in the world takes place in the Great Hall of the University of Helsinki, Aleksanterinkatu 5.</p>
 				</div>
 			</div>
@@ -257,8 +256,12 @@
 				<h3 >Announcements</h3>
 				<ul style="padding-top: 50px; text-align: left;">
 					<li style="padding-bottom: 10px;">
+						<h4>11 September 2023</h4>
+						<p style="font-size: 20px;">Finalized program is now published!</a></p>
+					</li>
+					<li style="padding-bottom: 10px;">
 						<h4>11 Auguts 2023</h4>
-						<p style="font-size: 20px;">We are looking for volunteers to help during the Legal Design Summit in making it a success <a href="volunteer.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
+						<p style="font-size: 20px;">We are looking for volunteers to help during the Legal Design Summit in making it a success</a></p>
 					</li>
 					<li style="padding-bottom: 10px;">
 						<h4>3 July 2023</h4>
