--- a/program-thursday.html
+++ b/program-thursday.html
@@ -205,7 +205,7 @@
         </tr>
         <tr>
           <td style="border-left: 4px solid #aeede8; border-bottom: 4px solid #aeede8"><h3>14.35-14.55	</h3></td>
-          <td style="border-right: 4px solid #aeede8; border-bottom: 4px solid #aeede8"><h3><span style="font-weight: bold;">Marco Imperiale</span>: Fairness by Design: How Might We End Deception and Manipulation Online?</h3></td>
+          <td style="border-right: 4px solid #aeede8; border-bottom: 4px solid #aeede8"><h3><span style="font-weight: bold;">Marie Potel-Saville</span>: Fairness by Design: How Might We End Deception and Manipulation Online?</h3></td>
         </tr>
         <tr>
           <td><h3>15.00-15.45</h3></td>
