Minor last-minute fixes

--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<div class="wrapper footer">
+<div class="wrapper footer" style="padding-bottom: 0px;">
 
   
   
@@ -11,8 +11,7 @@
     <div class="content-main">
   
   <div class="justify-center">
-    <p><a href="mailto:info@legaldesignsummit.com"> info@legaldesignsummit</a> | <a href="privacy.html">Privacy Policy</a> | <a href="privacy-rec.html">Recruitment Privacy Policy</a></p>
-    <p class="small">Legal Design Summit reserves the right to make changes to the programme and the speakers.</p>
+    <p style="color: #7ddad0; font-weight: bold;"><a style="color: black; font-weight: normal;" href="mailto:info@legaldesignsummit.com"> info@legaldesignsummit</a> | <a style="color: black;  font-weight: normal;" href="https://forms.gle/yFSxNdMBgnmbwZdWA"> Whistleblower Form</a> | <a style="color: black;  font-weight: normal;" href="privacy.html">Privacy Policy</a> | <a style="color: black;  font-weight: normal;" href="privacy-rec.html">Recruitment Privacy Policy</a></p>
   </div>
   
   <a href="#" class="scroll-up" style="padding-top: 30px; padding-bottom: 10px; margin-bottom: 0px;"></a>
@@ -31,6 +30,7 @@
       <li class="flex-item" style="width: 140px;"><img src="images/collabs/Tietoevry.png"></a></li>
       <li class="flex-item" style="width: 90px;"><img src="images/collabs/Edita.png"></a></li>
       <li class="flex-item" style="width: 100px;"><img src="images/collabs/DLA_Piper.jpg"></a></li>
+      <li class="flex-item" style="width: 190px;"><img src="images/collabs/Hansen.jpg"></a></li>
       <li class="flex-item" style="width: 120px;"><img src="images/collabs/Simmons_&_Simmons_logo.svg.png"></a></li>
       <li class="flex-item" style="width: 180px;"><img src="images/collabs/Booking_com.png"></a></li>
 
