--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		    <li class=""><a href="about-us.html">About Us</a></li>
 			<li class=""><a href="tickets.html">Tickets</a></li>
 			<li class=""><a href="speakers-thursday.html">Speakers</a></li>
-		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
+		    <li class=" last"><a href="why-attend.html">History</a></li>
 		  </ul>
 		</div>
 		
@@ -343,6 +343,7 @@
 			<li class="flex-item" style="width: 250px"><a href="https://www.tietoevry.com/fi/" target="_blank"><img src="images/collabs/Tietoevry.png"></a></li>
 			<li class="flex-item" style="width: 170px"><a href="https://shop.edita.fi/" target="_blank"><img src="images/collabs/Edita.png"></a></li>
 			<li class="flex-item" style="width: 200px"><a href="https://www.dlapiper.com/en-us" target="_blank"><img src="images/collabs/DLA_Piper.jpg"></a></li>
+			<li class="flex-item" style="width: 290px"><a href="https://wearehansen.se/" target="_blank"><img src="images/collabs/Hansen.jpg"></a></li>
 			<li class="flex-item" style="width: 230px"><a href="https://www.simmons-simmons.com/" target="_blank"><img src="images/collabs/Simmons_&_Simmons_logo.svg.png"></a></li>
 			<li class="flex-item" style="width: 320px"><a href="https://www.booking.com/" target="_blank"><img src="images/collabs/Booking_com.png"></a></li>
 		</ul>
@@ -460,7 +461,7 @@
 
 
 
-<div class="wrapper actions" style="background-color: white;">
+<div class="wrapper actions" style="background-color: white; padding-bottom: 0px;">
   <div class="container">
     <div id="content-actions">
       <div class="content-main">
@@ -478,15 +479,12 @@
   </div>
 </div>
 
-<div class="wrapper footer" style="background-color: white;">
+<div class="wrapper footer" style="background-color: white; padding-top: 40px;">
   <div class="container">
       <div class="content-main">
-	<div class="justify-center">
-	  <p><strong>Contact:</strong><br><a href="mailto:&#105;&#110;&#102;&#111;&#064;&#108;&#101;&#103;&#097;&#108;&#100;&#101;&#115;&#105;&#103;&#110;&#115;&#117;&#109;&#109;&#105;&#116;&#046;&#099;&#111;&#109;">&#105;&#110;&#102;&#111;&#064;&#108;&#101;&#103;&#097;&#108;&#100;&#101;&#115;&#105;&#103;&#110;&#115;&#117;&#109;&#109;&#105;&#116;&#046;&#099;&#111;&#109;</a></p>
-	  <p class="small">Legal Design Summit reserves the right to make changes to the programme and the speakers.</p>
-	  <p><a href="privacy.html">Privacy Policy</a></p>
-	  <p><a href="privacy-rec.html">Recruitment Privacy Policy</a></p>	
-	</div>
+		<div class="justify-center">
+			<p style="color: #7ddad0; font-weight: bold;"><a style="color: black; font-weight: normal;" href="mailto:info@legaldesignsummit.com"> info@legaldesignsummit</a> | <a style="color: black;  font-weight: normal;" href="https://forms.gle/yFSxNdMBgnmbwZdWA"> Whistleblower Form</a> | <a style="color: black;  font-weight: normal;" href="privacy.html">Privacy Policy</a> | <a style="color: black;  font-weight: normal;" href="privacy-rec.html">Recruitment Privacy Policy</a></p>
+		</div>
       </div>
     </div>
 	<a href="#" class="scroll-up" style="padding-top: 30px; padding-bottom: 10px; margin-bottom: 0px;"></a>
