--- a/program-thursday.html
+++ b/program-thursday.html
@@ -108,7 +108,7 @@
 		    <li class=""><a href="about-us.html">About Us</a></li>
         <li class=""><a href="tickets.html">Tickets</a></li>
         <li class=""><a href="speakers-thursday.html">Speakers</a></li>
-		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
+		    <li class=" last"><a href="why-attend.html">History</a></li>
 		  </ul>
 		</div>
 	      </div>
@@ -201,7 +201,7 @@
         </tr>
         <tr>
           <td style="border-left: 4px solid #aeede8"><h3>14.00-14.30	</h3></td>
-          <td style="border-right: 4px solid #aeede8"><h3><span style="font-weight: bold;">Astrid Kohlmeier (lead), Dorra Harrar, Laura Hartmann, Karol Valencia</span>: Innovative Thinking and Cultural Diversity in Legal Design</h3></td>
+          <td style="border-right: 4px solid #aeede8"><h3><span style="font-weight: bold;">Astrid Kohlmeier (lead), Dorra Harrar, Laura Hartmann, Karol Valencia</span>: Innovative Thinking and Cultural Diversity of Legal Design</h3></td>
         </tr>
         <tr>
           <td style="border-left: 4px solid #aeede8; border-bottom: 4px solid #aeede8"><h3>14.35-14.55	</h3></td>
@@ -237,9 +237,9 @@
         </tr>
 
         <tr>
-          <td style="vertical-align: top;"><h3>17.15</h3></td>
+          <td style="vertical-align: top;"><h3>18.00</h3></td>
           <td>
-            <h3 style="margin-bottom: 16px;">End time, After Party at Dottir!</h3>
+            <h3 style="margin-bottom: 16px;">After Party at Dottir!</h3>
             <p style="margin-bottom: 32px;">After the first Summit day we are welcomed at Dottir - stay tuned for details, but don’t book your evening!</p>
             <div class="dot_logo"><a href="https://www.dottirlaw.com/" target="_blank"><img src="images/collabs/Dottir-logo-musta.jpg"></a></div>
           </td>
@@ -273,7 +273,7 @@
 
  
 
-    <div class="wrapper actions">
+    <div class="wrapper actions" style="padding-bottom: 0px;">
       
       <!-- Container Section Begins -->
       
