--- a/program-wednesday.html
+++ b/program-wednesday.html
@@ -83,7 +83,7 @@
 		    <li class=""><a href="about-us.html">About Us</a></li>
         <li class=""><a href="tickets.html">Tickets</a></li>
         <li class=""><a href="speakers-thursday.html">Speakers</a></li>
-		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
+		    <li class=" last"><a href="why-attend.html">History</a></li>
 		  </ul>
 		</div>
 	      </div>
@@ -162,7 +162,7 @@
 
  
 
-    <div class="wrapper actions">
+    <div class="wrapper actions" style="padding-bottom: 0px;">
       
       <!-- Container Section Begins -->
       
