--- a/why-attend.html
+++ b/why-attend.html
@@ -270,8 +270,8 @@
         <li class=""><a href="brainfactory.html">BrainFactory</a></li>
 		    <li class=""><a href="about-us.html">About Us</a></li>
         <li class=""><a href="tickets.html">Tickets</a></li>
-        <li class=""><a href="volunteer.html">Volunteer</a></li>
-		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
+        <li class=""><a href="speakers-thursday.html">Speakers</a></li>
+		    <li class=" last"><a href="why-attend.html">History</a></li>
 		  </ul>
 		</div>
 	      </div>
@@ -290,7 +290,7 @@
       <div class="container">
         
 
-	<!-- Content Section Begins -->
+	<!-- Hidden after the ticket sale was done, this section could be used again! 
 
 	<div id="content-why-attend" class="justify-center">
 
@@ -326,7 +326,7 @@
 	  </div>
 
 	</div>
-
+-->
 
       </div>
 
@@ -487,7 +487,7 @@
 
     <!-- Wrapper // Content Actions Section Begins -->
 
-    <div class="wrapper actions">
+    <div class="wrapper actions" style="padding-bottom: 0px;">
 
      
       <!-- Container Section Begins -->
