--- a/brainfactory.html
+++ b/brainfactory.html
@@ -147,7 +147,7 @@
                           <li class=""><a href="about-us.html">About Us</a></li>
                           <li class=""><a href="tickets.html">Tickets</a></li>
                           <li class=""><a href="speakers-thursday.html">Speakers</a></li>
-                          <li class=" last"><a href="why-attend.html">Why attend?</a></li>
+                          <li class=" last"><a href="why-attend.html">History</a></li>
                         </ul>
                       </div>
                     </div>
@@ -336,7 +336,7 @@
   
 
 
-    <div class="wrapper actions">
+    <div class="wrapper actions" style="padding-bottom: 0px;">
       
       <!-- Container Section Begins -->
       
