--- a/privacy-rec.html
+++ b/privacy-rec.html
@@ -54,7 +54,7 @@
 		    <li class=""><a href="about-us.html">About Us</a></li>
 			<li class=""><a href="tickets.html">Tickets</a></li>
 			<li class=""><a href="speakers-thursday.html">Speakers</a></li>
-		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
+		    <li class=" last"><a href="why-attend.html">History</a></li>
 		  </ul>
 		</div>
 	      </div>
