--- a/tickets.html
+++ b/tickets.html
@@ -81,7 +81,7 @@
 		    <li class=""><a href="about-us.html">About Us</a></li>
         <li class=""><a href="tickets.html">Tickets</a></li>
         <li class=""><a href="speakers-thursday.html">Speakers</a></li>
-		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
+		    <li class=" last"><a href="why-attend.html">History</a></li>
 		  </ul>
 		</div>
 	      </div>
@@ -147,7 +147,7 @@
 
     <!-- Wrapper // Content Actions Section Begins -->
 
-    <div class="wrapper actions">
+    <div class="wrapper actions" style="padding-bottom: 0px;">
       
       <!-- Container Section Begins -->
       
