removed program page which was mot warranted anymore

--- a/brainfactory.html
+++ b/brainfactory.html
@@ -286,7 +286,7 @@
               </tr>
 
               <tr>
-                <td class="bulp"><p>--></p></td>
+                <td class="bulp"><p></p></td>
                 <td><p>Afterwork at Clarion open for everyone!</p></td>
               </tr>
             </tbody>
