--- a/program-friday.html
+++ b/program-friday.html
@@ -90,7 +90,7 @@
 		    <li class=""><a href="about-us.html">About Us</a></li>
         <li class=""><a href="tickets.html">Tickets</a></li>
         <li class=""><a href="speakers-thursday.html">Speakers</a></li>
-		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
+		    <li class=" last"><a href="why-attend.html">History</a></li>
 		  </ul>
 		</div>
 	      </div>
@@ -118,7 +118,7 @@
         <h1>
           <a href="program-wednesday.html" class="day_selector">Wednesday</a> |
           <a href="program-thursday.html" class="day_selector">Thursday</a> |
-          <a href="program-friday.html" class="selected_day">History</a>
+          <a href="program-friday.html" class="selected_day">Friday</a>
         </h1>
       
   
