Updated the time table

--- a/brainfactory.html
+++ b/brainfactory.html
@@ -289,7 +289,7 @@
                 <td class="bulp"><p></p></td>
                 <td><p>Afterwork at Clarion open for everyone!</p></td>
               </tr>
-            </tbody>
+            </tbody>§ 
           </table>
 
         </div>
