--- a/program-friday.html
+++ b/program-friday.html
@@ -205,21 +205,24 @@
           <td style="border-left: 4px solid #aeede8"><h3>15.35-16.05	</h3></td>
           <td style="border-right: 4px solid #aeede8"><h3><span style="font-weight: bold;">Dan Jackson (lead), Kirsti Lonka, Aleida Luján Pinelo and Andrea Botero</span>: Legal + Design + Education: Inventing the Future</h3></td>
         </tr>
-        <tr class="borders">
-          <td style="border-left: 4px solid #aeede8"><h3>16.10-16.30	</h3></td>
-          <td style="border-right: 4px solid #aeede8"><h3><span style="font-weight: bold;">Cat Moon</span>: The Future of Legal Design Starts Within</h3></td>
+
+        <tr>
+          <td style="border-left: 4px solid #aeede8"></td><h3>16.10-16.20</h3></td>
+          <td style="border-left: 4px solid #aeede8"> </td><h3>Brainfactory Presentation</h3></td>
         </tr>
+
         <tr class="borders">
-          <td style="border-left: 4px solid #aeede8"><h3>16.35-16.55	</h3></td>
+          <td style="border-left: 4px solid #aeede8"><h3>16.25-16.45	</h3></td>
           <td style="border-right: 4px solid #aeede8"><h3><span style="font-weight: bold;">Ilona Logvinova</span>: Innovation as a Driver: Lawyers are Legal Designers, Content Creators, and Pilots</h3></td>
         </tr>
         <tr class="borders">
-          <td style="border-left: 4px solid #aeede8; border-bottom: 4px solid #aeede8"><h3>17.00-17.20</h3></td>
-          <td style="border-right: 4px solid #aeede8; border-bottom: 4px solid #aeede8"><h3><span style="font-weight: bold;">Sankalp Bhatnagar</span>: New Legal Imagination</h3></td>
+          <td style="border-left: 4px solid #aeede8; border-bottom: 4px solid #aeede8"><h3>16.50-17.10	</h3></td>
+          <td style="border-right: 4px solid #aeede8; border-bottom: 4px solid #aeede8"><h3><span style="font-weight: bold">Cat Moon</span>: The Future of Legal Design Starts Within</h3></td>
         </tr>
+
         
         <tr>
-          <td><h3>17.20-17.40</h3></td>
+          <td><h3>17.10-17.30</h3></td>
           <td><h3>Closing remarks , thank you all lovely people for attending!</h3></td>
         </tr>
       </tbody>
