--- a/speakers-friday.html
+++ b/speakers-friday.html
@@ -270,11 +270,11 @@
                     </div>
 
                     <div class="flex-item">
-                      <div class="image"><a><img src="images/speakers/2023/sankalp-bhatnagar.jpeg"></a></div>
-                      <h3>Sankalp Bhatnagar</h3>
-                      <p>Senior Researcher at NuLawLab<span class="read-more-text">. Sankalp Bhatnagar gained his first exposure to the work of legal design in the Law, Justice, and Design Seminar at Harvard Law School, after which he led efforts to advance this field and co-taught the Laboratory Seminar in Applied & Critical Legal Design at Northeastern University School of Law. He is a Fellow at the Harvard Library Innovation Lab conducting research in partnership with the NuLawLab, where he is a Senior Researcher, and has previously been a Research Resident</span></p>
-                      <span class="read-more-btn">Read More...</span>
+                      <div class="image"><a><img src="images/speakers/2023/cat-moon.jpg"></a></div>
+                      <h3>Cat Moon</h3>
+                      <p>Director of Innovation Design at Vanderbilt Law School and #MakeLawBetter Provocateur</p>
                     </div>
+
       
 
                   </div>
