Fixed brainfactory in friday

--- a/program-friday.html
+++ b/program-friday.html
@@ -207,14 +207,16 @@
         </tr>
 
         <tr>
-          <td style="border-left: 4px solid #aeede8"></td><h3>16.10-16.20</h3></td>
-          <td style="border-left: 4px solid #aeede8"> </td><h3>Brainfactory Presentation</h3></td>
+          <td style="border-left: 4px solid #aeede8"><h3>16.10-16.20 </h3></td>
+          <td style="border-right: 4px solid #aeede8"><h3>BRAINFACTORY PRESENTATION</h3></td>
         </tr>
 
-        <tr class="borders">
+       
+        <tr>
           <td style="border-left: 4px solid #aeede8"><h3>16.25-16.45	</h3></td>
           <td style="border-right: 4px solid #aeede8"><h3><span style="font-weight: bold;">Ilona Logvinova</span>: Innovation as a Driver: Lawyers are Legal Designers, Content Creators, and Pilots</h3></td>
         </tr>
+
         <tr class="borders">
           <td style="border-left: 4px solid #aeede8; border-bottom: 4px solid #aeede8"><h3>16.50-17.10	</h3></td>
           <td style="border-right: 4px solid #aeede8; border-bottom: 4px solid #aeede8"><h3><span style="font-weight: bold">Cat Moon</span>: The Future of Legal Design Starts Within</h3></td>
