Removed Jose from program and speakers due a cancellation

--- a/program-friday.html
+++ b/program-friday.html
@@ -153,7 +153,7 @@
         </tr>
         <tr class="borders">
           <td style="border-left: 4px solid #aeede8; border-bottom: 4px solid #aeede8"><h3>10.55-11:25</h3></td>
-          <td style="border-right: 4px solid #aeede8; border-bottom: 4px solid #aeede8"><h3><span style="font-weight: bold;">Jose Torres (lead), Joaquin Santuber and Emily Macloud</span>: The Courtroom of Tomorrow</h3></td>
+          <td style="border-right: 4px solid #aeede8; border-bottom: 4px solid #aeede8"><h3><span style="font-weight: bold;">Joaquin Santuber and Emily Macloud</span>: The Courtroom of Tomorrow</h3></td>
         </tr>
 
         <tr>
