added photos of the volunteers and crew for 23

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 				<a class="twitter-timeline" data-chrome="noheader nofooter noborders" data-width="500" data-height="500" data-link-color="#aaaaaa" href="https://twitter.com/LegaldesignFI"></a>
 				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</div>
-		-->
+		
 			
 			<div class="col-md-6 col-xs-12" style="padding-left: 5%; padding-right: 5%;">
 				<h3 >Announcements</h3>
@@ -292,6 +292,10 @@
 				<div><img src="images/backgrounds/Map-for-LDS-2023.png" class="img-fluid"></div>
 				
 			</div>
+		-->
+
+		<h3 style="color: #c30979">Thank you for the Summit 2023 - it was truely amazing!</h3>
+		<img src="images/team/crew23.jpg">
 		</div>
 
 	</div>
