Update of website

--- a/about-us.html
+++ b/about-us.html
@@ -130,7 +130,7 @@
           <div class="row justify-content-md-center" style="margin-top: 60px; margin-left: 35px; margin-right: 35px;">
 
             <div class="col-md-4">
-              <h3 style="font-size: 25px;">President of the Board<br><br></h3>
+              <h3 style="font-size: 25px;">Chair<br><br></h3>
               <div class="image"><a href="mailto:mia.ihamuotila@legaldesignsummit.com"><img
                     src="images/team/team-2023/mia-ihamoutila.jpg"></a></div>
               <p>Mia Ihamuotila<br><span class="small"></p>
@@ -138,7 +138,7 @@
                   class="icon linkedin">LinkedIn</a></span></p>
             </div>
             <div class="col-md-4">
-              <h3 style="font-size: 25px;">Vice president<br><br></h3>
+              <h3 style="font-size: 25px;">Vice-Chair<br><br></h3>
               <div class="image"><img src="images/team/team-2023/mantyla-sade.jpg"></div>
               <p>Sade Mäntylä<br><span class="small"></p>
               <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/sademantyla/"
