--- a/regions/scripts.html
+++ b/regions/scripts.html
@@ -9,10 +9,9 @@
 <script type="text/javascript" src="scripts/vendor/formstone/equalize.js"></script>
 <script type="text/javascript" src="scripts/vendor/formstone/lightbox.js"></script>
 <script type="text/javascript" src="scripts/vendor/formstone/viewer.js"></script>
-<script type="text/javascript" src="scripts/main.js?<?php print time(); ?>"></script>
+<script type="text/javascript" src="scripts/main.js?v=1.0"></script>
 
 <script>
-
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -20,5 +19,5 @@
 
 	ga('create', 'UA-1497627-36', 'auto');
 	ga('send', 'pageview');
-
 </script>
+
