--- a/regions/styles.html
+++ b/regions/styles.html
@@ -3,4 +3,4 @@
 <link href="css/vendor/formstone/carousel.css" type="text/css" rel="stylesheet" media="all">
 <link href="css/vendor/formstone/lightbox.css" type="text/css" rel="stylesheet" media="all">
 <link href="css/vendor/formstone/themes/light.css" type="text/css" rel="stylesheet" media="all">
-<link href="css/styles.css?<?php print time(); ?>" type="text/css" rel="stylesheet" media="all">
+<link href="css/styles.css?v=1.0" type="text/css" rel="stylesheet" media="all">
