--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 		-->
 
 					<h3 style="color: #c30979">Thank you to all volunteers, partners and supporters for the 2023 Summit
-						- it was truely amazing!</h3>
+						- it was truly amazing!</h3>
 					<p style="font-size: 20px; padding-top: 40px;">
 						Do you want to volunteer for the next edition?<br>
 						<a href="volunteer.html" target="_blank" style="color: #50cec1; text-decoration: underline;">
