Update Get Notified button with Google Form link

--- a/index.html
+++ b/index.html
@@ -154,13 +154,21 @@
 					<div class="blue-bar">
 					</div>
 					<h1 style="color: white;">Legal Design Summit</h1>
-					<p class="slogan-enhanced">COMING IN 2025 | HELSINKI, FINLAND</p><br><br>
+					<p class="slogan-enhanced">11 - 12 September | Workshops 10 September @ HELSINKI, FINLAND</p>
+					<br><br>
 					<p class="slogan-long">Welcome to the largest non-profit legal design event in the world.</p>
 				</div>
 			</div>
 			<!-- HEADER Section Ends -->
 		</div>
 	</div>
+	<div class="notification-section">
+		<a href="https://docs.google.com/forms/d/e/1FAIpQLSdcuaswTaYZ7n79MputYCVrCZiopyA82FS_GWKvLSz7hGTY5w/viewform"
+			target="_blank" class="notify-btn">
+			Get notified when tickets drop
+		</a>
+	</div>
+
 
 	<!-- Wrapper // Header Section Ends -->
 
