Added partner with Us button and adjusted spacing

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
 												society.<br><br>DESIGN THINKING WILL CHANGE THE PRACTICE OF LAW.
 											</h2>
 
+
 										</div>
 
 									</div>
@@ -312,15 +313,22 @@
 				
 			</div>
 		-->
-
-					<h3 style="color: #c30979">Thank you to all volunteers, partners and supporters for the 2023 Summit
-						- it was truly amazing!</h3>
+					<div style="text-align: center; margin-bottom: 30px;">
+						<a href="mailto:partnerships@legaldesignsummit.com"
+							style="background-color: #c30979; color: white; padding: 15px 30px; font-size: 18px; font-weight: bold; text-decoration: none; border-radius: 8px; display: inline-block;">
+							Partner with Us to make the 2025 edition happen!
+						</a>
+					</div>
 					<p style="font-size: 20px; padding-top: 40px;">
 						Do you want to volunteer for the next edition?<br>
 						<a href="volunteer.html" target="_blank" style="color: #50cec1; text-decoration: underline;">
 							Click here
 						</a>
 					</p>
+					<h3 style="color: #c30979; padding-top: 40px">Thank you to all volunteers, partners and supporters
+						for the 2023 Summit
+						- it was truly amazing!</h3>
+
 					<img src="images/team/crew23.jpg">
 				</div>
 
