added team pictures

--- a/about-us.html
+++ b/about-us.html
@@ -93,7 +93,7 @@
           <p>We are a team of ambitious doers, who decided to create a forum for international experts in the fields of
             law, design, business and digital services.</p>
 
-          <p>We are volunteers, and majority students! </p>
+          <p>We are all volunteers! </p>
 
 
         </div>
@@ -108,94 +108,149 @@
 
   <div class="wrapper color-secondary team">
 
-    <div class="container">
+    <div id="content-team">
+      <div class="justify-center">
+        <h2>Meet the team</h2>
 
-      <!-- Content Section Begins -->
+        <p>
+          Contact anyone on the team by emailing them at firstname.lastname@legaldesignsummit.com
+        </p>
+      </div>
 
-      <div id="content-team">
-
+      <div class="container">
         <div class="justify-center">
+          <h3 style="color: #c30979; margin-top: 50px; margin-bottom: 30px;">MEET THE TEAM BEHIND THE 2025 EDITION</h3>
+        </div>
 
-          <h2>Meet the team</h2>
-
-          <p>
-            Contact anyone on the team by emailing them at firstname.lastname@legaldesignsummit.com
-
-          </p>
-
-
-
-          <h3 style="color: #c30979; margin-top: 50px;">LEGAL DESIGN SUMMIT BOARD</h3>
-
-          <div class="row justify-content-md-center" style="margin-top: 60px; margin-left: 35px; margin-right: 35px;">
-
-            <div class="col-md-4">
-              <h3 style="font-size: 25px;">Chair<br><br></h3>
-              <div class="image"><a href="mailto:mia.ihamuotila@legaldesignsummit.com"><img
-                    src="images/team/team-2023/mia-ihamoutila.jpg"></a></div>
-              <p>Mia Ihamuotila<br><span class="small"></p>
-              <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/mia-ihamuotila/"
-                  class="icon linkedin">LinkedIn</a></span></p>
+        <div class="row justify-content-md-center"
+          style="margin-top: 60px; margin-left: 35px; margin-right: 35px; margin-bottom: 60px;">
+          <!-- Team Member 1 -->
+          <div class="col-md-4">
+            <h3 style="font-size: 25px;">Partnerships<br><br></h3>
+            <div class="image"><a href="mailto:partnershipslegaldesignsummit.com"><img
+                  src="images/team/team-2025/Stephanie_Pasquill_Partnerships.PNG"
+                  style="border-radius: 50%; filter: grayscale(100%); width: 100%; aspect-ratio: 1/1; object-fit: cover;"></a>
             </div>
-            <div class="col-md-4">
-              <h3 style="font-size: 25px;">Vice-Chair<br><br></h3>
-              <div class="image"><img src="images/team/team-2023/mantyla-sade.jpg"></div>
-              <p>Sade Mäntylä<br><span class="small"></p>
-              <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/sademantyla/"
-                  class="icon linkedin">LinkedIn</a></span></p>
+            <p>Stephanie Pasquill<br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/stephanie-pasquill-1772b48/"
+                class="icon linkedin">LinkedIn</a></span></p>
+          </div>
+
+          <!-- Team Member 2 -->
+          <div class="col-md-4">
+            <h3 style="font-size: 25px;">Communications<br><br></h3>
+            <div class="image"><a href="mailto:lotta.pettersson@legaldesignsummit.com"><img
+                  src="images/team/team-2025/Lotta_Pettersson_Marketing and Communications Co-Team Lead.jpg"
+                  style="border-radius: 50%; filter: grayscale(100%); width: 100%; aspect-ratio: 1/1; object-fit: cover;"></a>
             </div>
-            <div class="col-md-4">
-              <h3 style="font-size: 25px;">Board Member<br><br></h3>
-              <div class="image"><img src="images/team/team-2023/andrea-lindblom.png"></div>
-              <p>Andrea Lindblom<br><span class="small"></p>
-              <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/andrea-lindblom/"
-                  class="icon linkedin">LinkedIn</a></span></p>
+            <p>Lotta Pettersson<br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/lotta-pettersson-528477201/"
+                class="icon linkedin">LinkedIn</a></span></p>
+          </div>
+
+          <!-- Team Member 3 -->
+          <div class="col-md-4">
+            <h3 style="font-size: 25px;">Partnerships<br><br></h3>
+            <div class="image"><a href="mailto:partnerships@legaldesignsummit.com"><img
+                  src="images/team/team-2025/Sebastian_Campo Toro_Partnerships.JPG"
+                  style="border-radius: 50%; filter: grayscale(100%); width: 100%; aspect-ratio: 1/1; object-fit: cover;"></a>
             </div>
-            <div class="col-md-4">
-              <h3 style="font-size: 25px;">Board Member<br><br></h3>
-              <div class="image"><img src="images/team/team-2023/marika-nieminen.jpg"></div>
-              <p>Marika Nieminen<br><span class="small"></p>
-              <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/marikapnieminen/"
-                  class="icon linkedin">LinkedIn</a></span></p>
+            <p>Sebastian Campo Toro <br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/sebastiancampotoro/"
+                class="icon linkedin">LinkedIn</a></span></p>
+          </div>
+
+          <!-- Team Member 4 -->
+          <div class="col-md-4">
+            <h3 style="font-size: 25px;">Operations<br><br></h3>
+            <div class="image"><a href="mailto:firstname.lastname@legaldesignsummit.com"><img
+                  src="images/team/team-2025/Laura_Hartnett_Director of Operations.jpg"
+                  style="border-radius: 50%; filter: grayscale(100%); width: 100%; aspect-ratio: 1/1; object-fit: cover;"></a>
             </div>
-            <div class="col-md-4">
-              <h3 style="font-size: 25px;">Board Member<br><br></h3>
-              <div class="image"><img src="images/team/team-2023/mannikko_malin.jpg"></div>
-              <p>Malin Männikkö<br><span class="small"></p>
-              <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/malinmannikko/"
-                  class="icon linkedin">LinkedIn</a></span></p>
-            </div>
+            <p>Laura Hartnett<br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/laurahartnett/"
+                class="icon linkedin">LinkedIn</a></span></p>
           </div>
         </div>
+      </div>
 
+      <div class="container">
+        <div class="justify-center">
 
-
-        <div class="small padding-top-30 justify-center">
-
-          <h2>2023 Volunteers</h2>
-          <p>Legal Design Summit is organized by volunteers</p>
-          <img src="images/team/volunteers23.jpg">
-          <p>Sonja Kojo, Maria Ahmas, Niina Putkonen, Juulia Lehtinen, Pilvi Alopaeus, Noora Rissanen, Andrea Lindblom,
-            Mia Ihamuotila, Werner Herajärvi, Arttu Mieolonen, Sade Mäntylä, Anni Kaarento, Ida Laakkonen, Susanna
-            Löfgren, Eero Kemppinen, Carol Hannud, Roosa Joensuu, Linnea Simon, Stephanie Pasquill, Ata Meric Tarhan,
-            Brincy James George, Sezer Selvi, Sofia Gil Turca, Marielle Delfin, Laura Marque-Mtz, Marina Paraboni, Manon
-            Colin, Philipp Hilpert, Sebastian Campo, Aino Järvinen, Aysu Ismayilzada, Aino-Nina Saarikoski </p>
+          <h3 style="color: #c30979; margin-top: 50px;">LEGAL DESIGN SUMMIT BOARD</h3>
         </div>
 
+        <div class="row justify-content-md-center" style="margin-top: 60px; margin-left: 35px; margin-right: 35px;">
 
-
-        <div class="small padding-top-30 justify-center">
-
-          <h2>2019 Volunteers</h2>
-          <img src="images/team/volunteers.jpg">
-
+          <div class="col-md-4">
+            <h3 style="font-size: 25px;">Chair<br><br></h3>
+            <div class="image"><a href="mailto:mia.ihamuotila@legaldesignsummit.com"><img
+                  src="images/team/team-2023/mia-ihamoutila.jpg"></a></div>
+            <p>Mia Ihamuotila<br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/mia-ihamuotila/"
+                class="icon linkedin">LinkedIn</a></span></p>
+          </div>
+          <div class="col-md-4">
+            <h3 style="font-size: 25px;">Vice-Chair<br><br></h3>
+            <div class="image"><img src="images/team/team-2023/mantyla-sade.jpg"></div>
+            <p>Sade Mäntylä<br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/sademantyla/"
+                class="icon linkedin">LinkedIn</a></span></p>
+          </div>
+          <div class="col-md-4">
+            <h3 style="font-size: 25px;">Board Member<br><br></h3>
+            <div class="image"><img src="images/team/team-2023/andrea-lindblom.png"></div>
+            <p>Andrea Lindblom<br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/andrea-lindblom/"
+                class="icon linkedin">LinkedIn</a></span></p>
+          </div>
+          <div class="col-md-4">
+            <h3 style="font-size: 25px;">Board Member<br><br></h3>
+            <div class="image"><img src="images/team/team-2023/marika-nieminen.jpg"></div>
+            <p>Marika Nieminen<br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/marikapnieminen/"
+                class="icon linkedin">LinkedIn</a></span></p>
+          </div>
+          <div class="col-md-4">
+            <h3 style="font-size: 25px;">Board Member<br><br></h3>
+            <div class="image"><img src="images/team/team-2023/mannikko_malin.jpg"></div>
+            <p>Malin Männikkö<br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/malinmannikko/"
+                class="icon linkedin">LinkedIn</a></span></p>
+          </div>
         </div>
+      </div>
 
 
-        <!-- Content Main Section Ends -->
+
+      <div class="small padding-top-30 justify-center">
+
+        <h2>2023 Volunteers</h2>
+        <p>Legal Design Summit is organized by volunteers</p>
+        <img src="images/team/volunteers23.jpg">
+        <p>Sonja Kojo, Maria Ahmas, Niina Putkonen, Juulia Lehtinen, Pilvi Alopaeus, Noora Rissanen, Andrea
+          Lindblom,
+          Mia Ihamuotila, Werner Herajärvi, Arttu Mieolonen, Sade Mäntylä, Anni Kaarento, Ida Laakkonen, Susanna
+          Löfgren, Eero Kemppinen, Carol Hannud, Roosa Joensuu, Linnea Simon, Stephanie Pasquill, Ata Meric Tarhan,
+          Brincy James George, Sezer Selvi, Sofia Gil Turca, Marielle Delfin, Laura Marque-Mtz, Marina Paraboni,
+          Manon
+          Colin, Philipp Hilpert, Sebastian Campo, Aino Järvinen, Aysu Ismayilzada, Aino-Nina Saarikoski </p>
+      </div>
+
+
+
+      <div class="small padding-top-30 justify-center">
+
+        <h2>2019 Volunteers</h2>
+        <img src="images/team/volunteers.jpg">
 
       </div>
+
+
+      <!-- Content Main Section Ends -->
+
     </div>
+  </div>
   </div>
   </div>
 
