--- a/program-thursday.html
+++ b/program-thursday.html
@@ -124,7 +124,7 @@
     <div class="container">
       <div style="text-align: center;">
 
-        <h2>PROGRAM LEGAL DESIGN SUMMIT</h2>
+        <h2>PROGRAM OF THE 2025 LEGAL DESIGN SUMMIT IS LOADING...</h2>
         <p style="font-size: 20px; padding-top: 40px;">
           Stay tuned for updates - or email us with your best ideas!<br>
           <a href="mailto:info@legaldesignsummit.com" target="_blank"
