--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 								<ul class="menu">
 									<li class=" first"><a href="#">Home</a></li>
 									<li class=""><a href="volunteer.html">Join us!</a></li>
-									<li class=""><a href="program-thursday.html">2023 Program</a></li>
-									<li class=""><a href="speakers-thursday.html">2023 Speakers</a></li>
+									<li class=""><a href="program-thursday.html">Program Loading...</a></li>
+									<li class=""><a href="speakers-thursday.html">Speakers Loading...</a></li>
 									<li class=""><a href="about-us.html">Team & Board</a></li>
 									<li class=""><a href="tickets.html">Tickets</a></li>
 									<li class=" last"><a href="why-attend.html">History</a></li>
