--- a/speakers-thursday.html
+++ b/speakers-thursday.html
@@ -87,10 +87,10 @@
                 <ul class="menu">
                   <li class=" first"><a href="#">Home</a></li>
                   <li class=""><a href="volunteer.html">Join us!</a></li>
-                  <li class=""><a href="program-thursday.html">Program</a></li>
-                  <li class=""><a href="about-us.html">Team</a></li>
+                  <li class=""><a href="program-thursday.html">Program Loading...</a></li>
+                  <li class=""><a href="about-us.html">Team & Board</a></li>
                   <li class=""><a href="tickets.html">Tickets</a></li>
-                  <li class=""><a href="speakers-thursday.html">Speakers</a></li>
+                  <li class=""><a href="speakers-thursday.html">Speakers Loading...</a></li>
                   <li class=" last"><a href="why-attend.html">History</a></li>
                 </ul>
               </div>
@@ -99,6 +99,10 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <div style="text-align: center; padding: 40px 0;">
+    <h3>2025 speakers are loading - explore previous years speakers below!</h3>
   </div>
 
   <div class="wrapper why-attend" style="padding-bottom: 0px;">
