--- a/tickets.html
+++ b/tickets.html
@@ -96,7 +96,7 @@
               <div class="menu-toggler">Menu<span class="icon"></span></div>
               <div class="menu-container">
                 <ul class="menu">
-                  <li class=" first"><a href="#">Home</a></li>
+                  <li class=" first"><a href="index.html">Home</a></li>
                   <li class=""><a href="volunteer.html">Join us!</a></li>
                   <li class=""><a href="program-thursday.html">Program</a></li>
                   <li class=""><a href="about-us.html">Team</a></li>
