--- a/about-us.html
+++ b/about-us.html
@@ -195,7 +195,10 @@
           <div class="col-md-4">
             <h3 style="font-size: 25px;">Chair<br><br></h3>
             <div class="image"><a href="mailto:mia.ihamuotila@legaldesignsummit.com"><img
-                  src="images/team/team-2025/Mia_Ihamuotila.jpg"></a></div>
+                  src="images/team/team-2025/Mia_Ihamuotila.jpg"
+                  style="border-radius: 50%; filter: grayscale(100%); width: 100%; aspect-ratio: 1/1; object-fit: cover;"></a>
+              </a>
+            </div>
             <p>Mia Ihamuotila<br><span class="small"></p>
             <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/mia-ihamuotila/"
                 class="icon linkedin">LinkedIn</a></span></p>
