--- a/about-us.html
+++ b/about-us.html
@@ -148,6 +148,17 @@
                 class="icon linkedin">LinkedIn</a></span></p>
           </div>
 
+          <div class="col-md-4">
+            <h3 style="font-size: 25px;">Speakers<br><br></h3>
+            <div class="image"><a href="mailto:humzah.khan@legaldesignsummit.com"><img
+                  src="images/team/team-2025/Humzah Khan Speakers Team.jpeg"
+                  style="border-radius: 50%; filter: grayscale(100%); width: 100%; aspect-ratio: 1/1; object-fit: cover;"></a>
+            </div>
+            <p>Humzah Khan<br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/humzah-khan-363093190/"
+                class="icon linkedin">LinkedIn</a></span></p>
+          </div>
+
           <!-- Team Member 3 -->
           <div class="col-md-4">
             <h3 style="font-size: 25px;">Partnerships<br><br></h3>
